css/shortcode-editor.css
#fv_player_boxLoadedContent{ background-color:white; }
#fv-player-shortcode-editor { background-color: white; }
.fv-wp-flowplayer-notice { background-color: #FFFFE0; border-color: #E6DB55; margin: 5px 0 15px; padding: 0 0.6em; border-radius: 3px 3px 3px 3px; border-style: solid; border-width: 1px; } 
.fv-wp-flowplayer-notice.fv-wp-flowplayer-note { background-color: #F8F8F8; border-color: #E0E0E0; } 
.fv-wp-flowplayer-notice p { font-family: sans-serif; font-size: 12px; margin: 0.5em 0; padding: 2px; } 
.fv_wp_flowplayer_playlist_remove { display: none; }
.fv-player-tabs-header { padding:6px 0 12px; }
#fv-flowplayer-playlist table { border-bottom: 1px #eee solid; }
#fv-player-shortcode-editor table input[type=text], #fv-flowplayer-playlist table input[type=text].with-button { width: 93%; }
#fv-player-shortcode-editor table textarea { width: 93%; }
#fv-player-shortcode-editor table input[type=text].half-field { width: 37%; }
#fv-player-shortcode-editor .fv-player-tab-video-files table input.with-button, #fv-player-shortcode-editor .fv-player-tab-video-files table textarea.with-button { width: 75%; margin-left: 1px; }
#fv-player-shortcode-editor .fv-player-tab-subtitles table input.with-button { width: 70%; }
#fv-player-shortcode-editor table input.fv_wp_flowplayer_field_subtitles { width: 82%; }
#fv-player-shortcode-editor table input.fv_wp_flowplayer_field_subtitles.with-button { width: 59%; }
#fv-player-shortcode-editor table select.fv_wp_flowplayer_field_subtitles_lang { width: 10%;float:left; margin: 1px 2px; height: 27px }
#fv-flowplayer-playlist table tr.video-size { display: none; }
#fv-flowplayer-playlist table tr#fv_wp_flowplayer_add_format_wrapper { display: none; }
#fv-flowplayer-playlist table tr#fv_wp_flowplayer_file_info { display: none; }
#fv-flowplayer-playlist table .fv_wp_flowplayer_field_rtmp { visibility: hidden; }
#fv-flowplayer-playlist table .fv_wp_flowplayer_field_rtmp_wrapper th { visibility: hidden; }
#fv-flowplayer-playlist table .hint { display: none; }
/*#fv-flowplayer-playlist table .button { display: none; }*/
#fv-flowplayer-playlist table:first-child tr.video-size { display: table-row; }
#fv-flowplayer-playlist table:first-child .hint { display: inline; }
#fv-flowplayer-playlist table:first-child tr#fv_wp_flowplayer_add_format_wrapper { display: table-row; }
#fv-flowplayer-playlist table:first-child tr#fv_wp_flowplayer_file_info { display: none; }
#fv-flowplayer-playlist table:first-child .fv_wp_flowplayer_field_rtmp { visibility: visible; }
#fv-flowplayer-playlist table:first-child .fv_wp_flowplayer_field_rtmp_wrapper th { visibility: visible; }
/*#fv-flowplayer-playlist table:first-child .button { display: inline-block; }*/
/*#colorbox, #cboxOverlay, #cboxWrapper{ z-index: 100000; }*/

#fv-player-shortcode-editor .fv-player-tab-video-files table .button { width: 22% }
#fv-player-shortcode-editor .fv-player-tab-subtitles table .button { width: 26% }
#fv-player-shortcode-editor .fv-player-tabs .submit-button-wrapper .button { width: auto; }

#fv-player-shortcode-editor-editor{ top:0; }
#fv-player-shortcode-editor-editor > table{ width:100%; }
#fv-player-shortcode-editor td{ vertical-align: top; position: relative }
.fv-player-tab table{ margin-bottom: 10px; }
.fv-player-tabs-header .nav-tab-wrapper{ margin:0; }
.fv-player-tabs-header .nav-tab-wrapper .nav-tab{ margin-left: 0; margin-right: .5em; }
.fv-player-tabs-header .nav-tab-wrapper, .wrap h2.nav-tab-wrapper, h1.nav-tab-wrapper{ border-spacing: 0px; padding-top: 0px;}
.fv_player_actions_end-toggle,.fv_player_interface_hide,.fv-player-playlist-item-title{ display:none; }
#fv_player_boxTitle{ display:none!important; }
#fv_player_boxLoadedContent{ margin-top:0; }

.fv-player-shortcode-editor-left{ width:40%; }
.fv-player-shortcode-editor-right{ width:60%; }
#fv-player-shortcode-editor #fv_wp_flowplayer_field_player_name { width: 96% }
.fv-player-tab{position:relative;}
.fv-player-tabs #fv-player-list-thumb-toggle{ position:absolute;right:10px;text-align:right;top:9px; }
#fv-player-list-thumb-toggle a{ text-decoration:none;margin-left:6px;color:#b4b9be; }
#fv-player-list-thumb-toggle a.active{ color:#0073aa; }
#fv-player-list-thumb-toggle a.disabled{ cursor:default; }
.fv-player-playlist-item-title, .fv-player-playlist-item-title:hover{ margin:0;border:0;background:transparent; }

/*Playlist view*/
.is-playlist .fv-player-playlist-item-title{ display:block; }
.is-playlist .fv_player_field_insert-button{ display:none; }
.is-playlist-active .playlist_edit{ display:none; }

.is-playlist .hide-if-playlist{display:none!important;}
.is-singular .hide-if-singular{display:none!important;}
.is-playlist-active .hide-if-playlist-active{display:none!important;}

.playlist_edit{ display:block; }
.fv-player-tab-playlist tr:not(:hover) .fvp_item_remove{visibility: hidden;}
.fv-player-tab-playlist tr:hover .fvp_item_remove{visibility: visible;color: #a00;}
.fv-player-tab-playlist a{cursor:pointer;}

.fv-player-tab-playlist .fv-player-playlist-item{ border-spacing: 0 2px; }
.fv-player-tab-playlist tbody td{ padding:3px 5px;height:50px;cursor:pointer; }
.fv-player-tab-playlist .fv-player-playlist-item tbody td:first-child{cursor:n-resize;}

.fvp_item_video-side-by-side{display:inline-block;vertical-align:top;float: left;margin-right: 1%;}
.fvp_item_video-filename {word-wrap: break-word;display: inline-block; max-width: 180px;}
.hide-thumbnails .fvp_item_video-filename {max-width: 100%;}
.fv-player-tab-playlist > table > thead > tr > th:nth-child(1),.fv-player-tab-playlist > table > tbody > tr > td:nth-child(1),
.fv-player-tab-playlist > table > thead > tr > th:nth-child(2),.fv-player-tab-playlist > table > tbody > tr > td:nth-child(2){ width:300px; }
.fv-player-tab-playlist > table > thead{ display:block; }
.fv-player-tab-playlist.hide-thumbnails .fvp_item_video-thumbnail{ display:none; }
.fv-player-tab-playlist > table > tbody{ display:block;overflow:auto;max-height:calc(100vh - 270px); }
#fv-player-list-thumb-toggle > .active{ font-weight:bold; }
#fv-player-list-thumb-toggle > a{ box-shadow:none; }
#fv-player-shortcode-editor td > input[type="checkbox"]{margin-top:-4px}

#fv-player-shortcode-editor-loading-spinner {background-image: url(../../../../wp-includes/images/wpspin-2x.gif); background-color: white; background-repeat: no-repeat; background-position: center; position:absolute; z-index: 2; height: 100%; width: 100%;}
#fv-player-shortcode-editor-loading-spinner.loaded {background: white}

/*Preview iframe*/
#fv-player-shortcode-editor-preview{ width: 460px;position:relative;text-align: center; }
#fv-player-shortcode-editor-preview div.fv-player-shortcode-editor-helper {display:none;}
#fv-player-shortcode-editor-preview.preview-loading #fv-player-shortcode-editor-preview-spinner,
#fv-player-shortcode-editor-preview.preview-no #fv-player-shortcode-editor-preview-no,
#fv-player-shortcode-editor-preview.preview-new-tab #fv-player-shortcode-editor-preview-new-tab{display:block;}
#fv-player-shortcode-editor-preview.preview-no #fv-player-shortcode-editor-preview-target,
#fv-player-shortcode-editor-preview.preview-new-tab #fv-player-shortcode-editor-preview-target{display:none}
#fv-player-shortcode-editor-preview.preview-new-tab #fv-player-shortcode-editor-preview-iframe-refresh{display:none!important}
#fv-player-shortcode-editor-preview-spinner, .fv-player-shortcode-editor-small-spinner, .fv-player-se-loading-indictor {background-image: url(../../../../wp-includes/images/wpspin-2x.gif); background-color: white;   background-repeat: no-repeat;   background-position: center}
#fv-player-shortcode-editor-preview-spinner{position:absolute; z-index: 2; height: 200px; width: 100%;}
.fv-player-shortcode-editor-small-spinner, .fv-player-se-loading-indictor {z-index: 2; background-size: 20px; height: 20px; width: 20px; display: inline-block}
.fv-player-shortcode-editor-small-spinner {position: absolute; top: 4px; right: 123px;}
.fvp_item_video-thumbnail img{max-width: 95px;max-height: 95px;}
#fv-player-shortcode-editor-preview-new-tab, #fv-player-shortcode-editor-preview-no{background-image: url(../images/icon-256x256.png);width: 256px;height: 290px;background-repeat: no-repeat;line-height:512px;overflow:hidden;margin:0 auto;text-align: center;}
#fv-player-shortcode-editor-preview-new-tab a {margin-top:256px;}

#fv-player-shortcode-editor-preview div.notice { display: block }

.first-item-only {
  display: none;
}
.fv-player-playlist-item[data-index="0"] .first-item-only {
  display: table-row;
}
.fv-player-playlist-item[data-index="0"] .first-item-only.fv_player_interface_hide {
  display: none;
}

.fv-player-tabs th { width: 21%; text-align: right; }
.fv-player-tabs .fv-player-tab-playlist th { text-align: left; }



/*  moved in from main plugin css */
.add_media span.wp-media-buttons-icon {
	background: url("img/media-button.png") no-repeat scroll left top;
    display: inline-block;
    height: 16px;
    margin: 0 2px;
    vertical-align: text-top;
    width: 16px;
}
#cboxWrapper a {
	text-decoration: none;	
}
a #add-format, a #add-rtmp {
    background: #333;
    border-radius: 2px;
    color: #fff;
    display: inline-block;
    font-size: 16px;
    font-weight: normal;
    height: 18px;
    line-height: 1rem;
    margin: 0 5px 0 0;
    text-align: center;
    width: 18px;
	padding: 0;
	text-decoration: none;
}
#fv-wordpress-flowplayer-popup table {
	width: 100%;	
}
#fv-wordpress-flowplayer-popup table th {
	text-align: right;	
	width: 18%;
	padding: 4px 2px;
}
#fv-wordpress-flowplayer-popup table td {
	padding: 4px 2px;
}

#fv_player_copy_to_clipboard, #fv_player_import_data {width: 80%}
#fv_player_copied_to_clipboard_message, #fv_player_imported_message {margin: 22px auto 0 auto; visibility: hidden; width: 20%; text-align: center}

#fv-player-shortcode-editor-editor ::placeholder {
  opacity:.5;
}

/* reset elementor overrides */
input, select, textarea { width: initial; border-radius:initial; color:initial;}
.partial-underline, .fv_flowplayer_language_add_link { text-decoration: underline; color: #0073aa; } 
.fvp_item_video-filename, .wp-list-table a { color: #0073aa; } 

